# piscineCpp

address_book/: address-book.cc  address-book.hh  contact-details.cc  contact-details.hh  main.cc
bimap/: bimap.hxx
cartesian_vector/: vector.cc
chain_of_responsibility/: a.out  director.cc  handler.cc  president.cc  vice-president.cc
closer_to/: closer-to.cc  closer-to.hh  main.cc
cmake/: CMakeLists.txt
cmake/cipeek/: CMakeLists.txt
cmake/cipeek/src/: cipeek.cc
cmake/include/ciutils/: ciutils.hh
cmake/src/: ciutils.cc
const/: person.cc  person.hh
constexpr_factorial/: constexpr-factorial.hh
directories_infos/: file.in  read-info.cc  read-info.hh
doubly_linked_list/: list.cc  main.cc  node.cc
engine/: a.out  engine.cc  engine.hh  motor-cycle.cc  motor-cycle.hh  motor-truck.cc  motor-truck.hh  vehicle.cc  vehicle.hh
equal_pairs/: pair.hh
exception/: game.cc  invalid-argument.cc  invalid-argument.hh  player.cc
exist_functor/: exist.hh  exist.hxx
find_optional/: find-optional.cc  find-optional.hh
for_each/: for-each.hh
forward_multiplication/: forward-multiplication.cc
implements/: implements.hh
int_container/: a.out  int-container.cc
is_numerical/: a.out  algorithm.hh  enable-if.hh  is-numerical.hh
is_prime/: a.out  is-prime.hh
merge_sort/: merge-sort.cc
my_nfts/: a.out  auction.cc  main.cc  nft.hxx  person.cc
path/: path.cc  unix-path.cc  unix-path.hh  windows-path.cc  windows-path.hh
ref_swap/: ref-swap.cc
replace/: a.out  inputfile  outputfile  replace.cc
singleton/: singleton.cc  singleton.hh
smtptr/: a.out  (+3 more)
(+12 files in other folders)
